# Hyengine

./: .gitmodules  CMakeLists.txt  README.md
assets-demo/hyengine/shader/: basic_pos_col_tex.glsl
assets/hyengine/font/meta/: Andala.csv  BPreplay.csv  Buycat.csv
assets/hyengine/shader/: basic_pos_col.glsl  basic_pos_col_tex.glsl
cmake/: Config.cmake  Dependencies.cmake  Export.cmake  Sources.cmake
sources/Hyengine/: CMakeLists.txt
sources/Hyengine/common/: array3d.hpp  colors.hpp  common.cpp  common.hpp  easing.cpp  easing.hpp  file_io.cpp  file_io.hpp  frustum.cpp  frustum.hpp  id_generator.hpp  interpolatable.hpp  line.cpp  line.hpp  math.hpp  nodes3d.hpp  pool_allocation_tracker.cpp  pool_allocation_tracker.hpp  portability.cpp  portability.hpp  rectangle.cpp  rectangle.hpp  rectangle_stack.cpp  rectangle_stack.hpp  ring_buffer.hpp  sized_numerics.hpp
sources/Hyengine/common/data/: array3d.hpp  bitvector.cpp  bitvector.hpp  nodes3d.hpp  palettized_vector.hpp  ring_buffer.hpp
sources/Hyengine/common/math/: aabb_box.cpp  aabb_box.hpp  array3d.hpp  easing.cpp  easing.hpp  frustum.cpp  frustum.hpp  interpolatable.hpp  line.cpp  line.hpp  math.hpp  nodes3d.hpp  rectangle.cpp  rectangle.hpp  rectangle_stack.cpp  rectangle_stack.hpp
sources/Hyengine/core/: file_io.cpp  file_io.hpp  hyengine.cpp  hyengine.hpp  logger.cpp  logger.hpp  portability.cpp  portability.hpp  profiler.cpp  profiler.hpp  ui_layout.cpp  ui_layout.hpp
sources/Hyengine/graphics/: camera.cpp  camera.hpp  gl_enums.cpp  gl_enums.hpp  graphics.cpp  graphics.hpp  native_window.cpp  native_window.hpp  shader.cpp  shader.hpp  shader_batching.cpp  shader_batching.hpp  texture_sampler_state.hpp  vertex_formats.hpp
sources/Hyengine/graphics/buffers/: basic_framebuffer.cpp  basic_framebuffer.hpp  frame_buffer.cpp  frame_buffer.hpp  pool_data_buffer.cpp  pool_data_buffer.hpp  render_texture.cpp  render_texture.hpp  standard_data_buffer.cpp  standard_data_buffer.hpp  texture_buffer.cpp  texture_buffer.hpp  typed_data_buffer.hpp  typed_pool_buffer.hpp  vertex_format_buffer.cpp  vertex_format_buffer.hpp
sources/Hyengine/graphics/font/: font_meta.cpp  font_meta.hpp
sources/Hyengine/graphics/renderers/: basic_immediate_renderer.cpp  basic_immediate_renderer.hpp  basic_renderer.cpp  basic_renderer.hpp  debug_renderer.cpp  debug_renderer.hpp  occlusion_box_renderer.hpp  text_renderer.cpp  text_renderer.hpp
sources/Hyengine/graphics/shaders/: shader.cpp  shader.hpp  shader_batching.cpp  shader_buffer_set.cpp  shader_buffer_set.hpp
sources/Hyengine/graphics/textures/: render_texture.cpp  render_texture.hpp  texture_buffer.cpp  texture_buffer.hpp  texture_sampler_state.cpp  texture_sampler_state.hpp  texture_set.cpp  texture_set.hpp
sources/Hyengine/hyui/: hyui.cpp  hyui.hpp  layout.cpp  layout.hpp
sources/Hyengine/input/: input.cpp  input.hpp  native_input.hpp  native_input_windows.cpp  virtual_controller.cpp  virtual_controller.hpp  virtual_keyboard.cpp  virtual_keyboard.hpp  virtual_mouse.cpp  virtual_mouse.hpp
sources/Hyengine/threading/: threading.cpp  threading.hpp
sources/demo/: CMakeLists.txt  main.cpp
sources/glad/src/: glad.cpp
sources/hyengine/: CMakeLists.txt
sources/hyengine-demo/: CMakeLists.txt  main.cpp
sources/hyengine/audio/: audio.hpp
sources/hyengine/common/: colors.hpp  common.cpp  common.hpp  id_generator.hpp  pool_allocation_tracker.cpp  pool_allocation_tracker.hpp  rectangle_stack.cpp  rectangle_stack.hpp
sources/hyengine/common/data/: array3d.hpp  bitvector.cpp  bitvector.hpp  nodes3d.hpp  palettized_vector.hpp  ring_buffer.hpp
sources/hyengine/common/math/: aa_box.cpp  aa_box.hpp  aa_rectangle.cpp  aa_rectangle.hpp  easing.cpp  frustum.cpp  frustum.hpp  interpolatable.hpp  line.cpp  line.hpp  math.hpp
sources/hyengine/core/: file_io.cpp  file_io.hpp  hyengine.cpp  hyengine.hpp  logger.cpp  logger.hpp  ui_layout.cpp  ui_layout.hpp
sources/hyengine/graphics/: camera.cpp  gl_enums.cpp  gl_enums.hpp  graphics.cpp  graphics.hpp  native_window.cpp  native_window.hpp  vertex_formats.hpp
sources/hyengine/graphics/buffers/: basic_framebuffer.cpp  basic_framebuffer.hpp  frame_buffer.cpp  frame_buffer.hpp  pool_data_buffer.cpp  pool_data_buffer.hpp  standard_data_buffer.cpp  standard_data_buffer.hpp  standard_framebuffer.hpp  typed_data_buffer.hpp  typed_pool_buffer.hpp  vertex_format_buffer.cpp  vertex_format_buffer.hpp
sources/hyengine/graphics/font/: font_meta.cpp  font_meta.hpp
sources/hyengine/graphics/renderers/: basic_renderer.cpp  basic_renderer.hpp  occlusion_box_renderer.cpp  occlusion_box_renderer.hpp  simple_vertex_accumulator.cpp  simple_vertex_accumulator.hpp
sources/hyengine/graphics/shaders/: shader.cpp  shader.hpp  shader_batching.cpp  shader_batching.hpp  shader_buffer_set.hpp
sources/hyengine/graphics/textures/: render_texture.cpp  render_texture.hpp  texture_buffer.cpp  texture_buffer.hpp  texture_sampler_state.cpp  texture_sampler_state.hpp  texture_set.cpp  texture_set.hpp
sources/hyengine/input/: input.cpp  input.hpp  native_input.hpp  native_input_windows.cpp  virtual_controller.cpp  virtual_controller.hpp  virtual_keyboard.cpp  virtual_keyboard.hpp  virtual_mouse.hpp
sources/hyengine/threading/: threading.cpp  threading.hpp
sources/miniaudio/: CMakeLists.txt
sources/pcg/: CMakeLists.txt
sources/pcg/include/: pcg_random.hpp
sources/stardraw/: CMakeLists.txt  demo.cpp
sources/stardraw/api/: api_backend.cpp  api_backend.hpp  commands.hpp  descriptors.hpp  pipeline.cpp  pipeline.hpp  types.hpp
sources/stardraw/gl/: backend_impl_gl.cpp  backend_impl_gl.hpp  commands_impl_gl.cpp  object_states_gl.cpp  object_states_gl.hpp  types_gl.hpp
sources/stardraw/gl45/: backend_impl.cpp  backend_impl.hpp  commands_impl.cpp
sources/stblib/: CMakeLists.txt  stb_image.hpp  stb_libs.cpp
sources/stblib/include/: stb_image_write.hpp  stb_truetype.hpp
sources/stblib/src/: stb_libs.cpp
